package.json配置文件修改

--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -6,7 +6,7 @@
 			.col-md-4
 				form#form-search(action="/search",method="post",onSubmit="return false")
 					.input-group(style="padding-top:10px")
-						input.form-control(type="text",onkeydown="onKeyDown(this)",name="query",placeholder="输入关键字并回车！")
+						input.form-control(type="text",onkeydown="onKeyDown(this)",name="query",placeholder="输入关键字搜索")
 						span.input-group-addon
 							i.glyphicon.glyphicon-search
 		.col-md-4.pull-right
