行业类别，实习薪资，实习工作地点数据结构添加， 整个框架的路由搭建

--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -19,15 +19,15 @@
 							span.caret
 						ul(class="dropdown-menu",aria-labelledby="dLable")
 							li
-								a(href="/admin/movie/list") 电影列表
+								a(href="/job/index/list") 电影列表
 							li
-								a(href="/admin/movie/add") 电影录入
+								a(href="/job/index/add") 电影录入
 							li
-								a(href="/admin/category/list") 电影分类
+								a(href="/job/category/list") 电影分类
 							li
-								a(href="/admin/category/new") 新增分类
+								a(href="/job/category/new") 新增分类
 							li
-								a(href="/admin/user/list") 用户列表
+								a(href="/job/user/list") 用户列表
 							li
 								a(href="/") 返回首页
 					a.btn.btn-danger(href="/loginout",style="display:inline; margin-left:10px;") 注销
