--- a/views/pages/userCenter.jade
+++ b/views/pages/userCenter.jade
@@ -3,7 +3,7 @@ block content
 	.container
 		.row
 			.col-md-12
-				form.form-horizontal(method="post",action="/admin/user/info",enctype="multipart/form-data")
+				form.form-horizontal(method="post",action="/job/user/info",enctype="multipart/form-data")
 					input(type="hidden",name="user[_id]",value="#{user._id}")
 					.form-group
 						label.col-sm-2.control-label(for="inputUserName") 用户名
