--- a/views/pages/userList.jade
+++ b/views/pages/userList.jade
@@ -6,7 +6,7 @@ block content
 				table.table.table-hover.table-bordered
 					thead
 						tr
-							th(style="text-align:center;width:60px;") 序号
+							th 序号
 							th 用户名
 							th 邮箱
 							th 手机号
@@ -16,12 +16,12 @@ block content
 					tbody
 						each item,index in users
 							tr(class="item-id-#{item._id}")
-								td(style="vertical-align: middle;text-align:center;") #{index+1}
+								td(style="vertical-align: middle;") #{index+1}
 								td(style="vertical-align: middle;") #{item.name}
 								td(style="vertical-align: middle;") #{item.email}
 								td(style="vertical-align: middle;") #{item.tel}
 								td(style="vertical-align: middle;") #{item.img}
 								td(style="vertical-align: middle;") #{moment(item.meta.createAt).format("MM/DD/YYYY")}
 								td(style="vertical-align: middle;text-align:center")
-									button.btn.btn-danger.del-user(type="button",data-id="#{item._id}",style="margin:0 5px;",onclick="del(this,'/admin/user/list')") 删除
-	script(src="/js/admin.js")
+									button.btn.btn-danger.del-user(type="button",data-id="#{item._id}",style="margin:0 5px;",onclick="del(this,'/job/user/list')") 删除
+	script(src="/js/job.js")
