--- a/views/pages/categoryResult.jade
+++ b/views/pages/categoryResult.jade
@@ -13,11 +13,11 @@ block content
                                     each item,index in cat.movies 
                                         .col-md-3
                                             .thumbnail
-                                                a(href="/movie/"+item._id)
+                                                a(href="/index/"+item._id)
                                                     img(src=item.poster,alt="#{item.title}",style="height:350px;")
                                                 .caption
                                                     h5=item.title
-                                                    a.btn.btn-primary(href="movie/#{item._id}",role="button") 观看预告片
+                                                    a.btn.btn-primary(href="index/#{item._id}",role="button") 观看预告片
                                 nav(style="text-align: center")
                                     ul.pagination.pagination-lg(style="margin:10px 0")
                                         if pageSize-1 <= 0
@@ -25,14 +25,14 @@ block content
                                                 a(href='javascript:;') «
                                         else
                                             li.previous
-                                                a(href='/movie/category/result?cat=#{categoryId}&pageSize=#{pageSize-1}') «
+                                                a(href='/index/category/result?cat=#{categoryId}&pageSize=#{pageSize-1}') «
                                         -for(var i = 0; i < page; i++){
                                             -if( pageSize == (i+1)){
                                                 li.active
                                                     span #{pageSize}
                                             -}else{
                                                 li
-                                                    a(href='/movie/category/result?cat=#{categoryId}&pageSize=#{i+1}') #{i+1}
+                                                    a(href='/index/category/result?cat=#{categoryId}&pageSize=#{i+1}') #{i+1}
                                             -}
                                         -}
                                         if pageSize+1 > page   
@@ -40,4 +40,4 @@ block content
                                                 a(href='javascript:;') »
                                         else
                                             li.next
-                                                a(href='/movie/category/result?cat=#{categoryId}&pageSize=#{pageSize+1}') »
+                                                a(href='/index/category/result?cat=#{categoryId}&pageSize=#{pageSize+1}') »
