--- a/views/pages/signIn.jade
+++ b/views/pages/signIn.jade
@@ -8,7 +8,7 @@ html
         include ../includes/head.jade
 body
     .container(style="background:#fff;")
-        form(method="POST",action="/user/signIn")
+        form(method="POST",action="/weintern/user/signIn")
             .row(style="padding-top:15px;font-size:18px;")
                 .col-md-6 登录
                 if !admin
