--- a/views/pages/signUp.jade
+++ b/views/pages/signUp.jade
@@ -8,7 +8,7 @@ html
         include ../includes/head.jade
 body
     .container(style="background:#fff;")
-        form(method="POST",action="/user/signUp")
+        form(method="POST",action="/weintern/user/signUp")
             .row(style="padding-top:15px;font-size:18px;")
                 .col-md-12 注册
             hr(style="margin:15px 0;border-color:#d9d9d9")
