--- a/views/pages/jobAdd.jade
+++ b/views/pages/jobAdd.jade
@@ -2,13 +2,13 @@ extends ../layout
 block content
 	.container
 		.row
-			form.form-horizontal(method="post",action="/job/index/new")
+			form.form-horizontal(method="post",action="/weintern/job/add",enctype='form')
 				.form-group
 					label.col-sm-2.control-label(for="inputDouban") 同步豆瓣
 					.col-sm-10
 						input#inputDouban.form-control(type="text",placeholder="请输入豆瓣电影ID",value="")
-				if movie._id
-					input(type="hidden", name="index[_id]", value=movie._id)
+				if job._id
+					input(type="hidden", name="job[_id]", value=job._id)
 				.form-group
 					label.col-sm-2.control-label(for="inputCategory") 电影分类
 					.col-sm-10
