实习岗位列表，实习地点列表，删除以实习工资来划分数据

--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -27,6 +27,10 @@
 							li
 								a(href="/weintern/job/category/add") 新增岗位分类
 							li
+								a(href="/weintern/job/worksite/list") 工作地点分类
+							li
+								a(href="/weintern/job/worksite/add") 新增工作地点分类
+							li
 								a(href="/weintern/user/list") 用户列表
 							li
 								a(href="/") 返回首页
