--- a/views/pages/jobList.jade
+++ b/views/pages/jobList.jade
@@ -7,29 +7,29 @@ block content
 					thead
 						tr
 							th(style="text-align:center;width:60px;") 序号
-							th 电影名字
-							th 导演
-							th(style="text-align:center;") 国家
-							th(style="text-align:center;") 上映年份
+							th 岗位名称
+							th 招聘公司
+							th(style="text-align:center;") 工作地点
+							th(style="text-align:center;") 投递邮箱
 							th(style="text-align:center;") 录入时间
 							th(style="text-align:center;") 所属分类
-							th(style="text-align:center;") 统计pv
+							th(style="text-align:center;") 访问统计
 							th(style="text-align:center;") 查看
 							th(style="text-align:center;") 更新 
 							th(style="text-align:center;") 删除
 					tbody
-						each item,index in movies
+						each item,index in jobs
 							tr(class="item-id-#{item._id}")
 								td(style="vertical-align: middle;text-align:center;") #{index+1}
-								td(style="vertical-align: middle;") #{item.title}
-								td(style="vertical-align: middle;") #{item.doctor}
-								td(style="vertical-align: middle;text-align:center;") #{item.country}
-								td(style="vertical-align: middle;text-align:center;") #{item.year}
+								td(style="vertical-align: middle;") #{item.jobname}
+								td(style="vertical-align: middle;") #{item.company}
+								td(style="vertical-align: middle;text-align:center;") #{item.worksite}
+								td(style="vertical-align: middle;text-align:center;") #{item.email}
 								td(style="vertical-align: middle;text-align:center;") #{moment(item.meta.createAt).format("MM/DD/YYYY")}
 								td(style="vertical-align: middle;text-align:center;") #{item.category.name}
 								td(style="vertical-align: middle;text-align:center;") #{item.pv}
-								td(style="vertical-align: middle;text-align:center;"): a(target="_blank",href="/index/#{item._id}") 查看
-								td(style="vertical-align: middle;text-align:center;"): a(target="_blank",href="/job/index/update/#{item._id}") 修改
+								td(style="vertical-align: middle;text-align:center;"): a(target="_blank",href="/weintern/job/detail/#{item._id}") 查看
+								td(style="vertical-align: middle;text-align:center;"): a(target="_blank",href="/weintern/job/update/#{item._id}") 修改
 								td(style="vertical-align: middle;text-align:center;") 
-									button.btn.btn-danger.del(type="button",data-id="#{item._id}",onclick="del(this,'/job/index/list')") 删除
-	script(src="/js/job.js")
+									button.btn.btn-danger.del(type="button",data-id="#{item._id}",onclick="del(this,'/weintern/job/list')") 删除
+	script(src="/js/admin.js")
