--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -1,3 +1,7 @@
 link(rel="stylesheet", href="/libs/bootstrap/dist/css/bootstrap.min.css")
 script(src="/libs/jquery/dist/jquery.min.js")
 script(src="/libs/bootstrap/dist/js/bootstrap.min.js")
+script(src="https://cdn.bootcss.com/moment.js/2.18.1/moment-with-locales.min.js")
+link(href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet")
+script(src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js")
+link(href="/css/style.css", rel='stylesheet')
