--- a/views/pages/jobDetail.jade
+++ b/views/pages/jobDetail.jade
@@ -2,22 +2,30 @@ extends ../layout
 block content
 	.container
 		.row
-			.col-md-7
-				video(src="http://vt1.doubanio.com/201712110957/12c62e018e91d5a14222d63900397239/view/movie/M/302220137.mp4",width="720",height="600",controls="controls", autoplay="true")
-			.col-md-5
-				dl.dl-horizontal
-					dt 电影名字
-					dd=movie.title
-					dt 导演
-					dd=movie.doctor
-					dt 国家
-					dd=movie.country
-					dt 语言
-					dd=movie.language
-					dt 上映年份
-					dd=movie.year
-					dt 简介
-					dd=movie.summary
+			.col-md-8
+				h2 #{job.jobname}
+				h6 #{moment(job.meta.updateAt).format("YYYY-MM-DD HH:mm:ss")} 刷新
+				h4 简述:
+					span #{job.salary}/天 |
+					span #{job.worksite} |
+					span #{job.education} |
+					span #{job.internWeek}天/周 |
+					span 实习#{job.interMonth}个月 |
+					if job.canFulltime
+						span 提供转正机会
+				if job.welfare
+					h4 职位福利: #{job.welfare}
+			.col-md-4.pull-right
+				.media
+					.media-left
+						if job.url
+							a(href='#{job.url}')
+						else
+							a(href='javascript:;')
+								img.media-object.img-rounded(src='/uploads/#{job.image}', alt='公司logo')
+					.media-body
+						h3.media-heading(style='color: blue') #{job.company}
+						h4 #{job.category}
 		h3(style="padding-bottom:12px;border-bottom:1px solid #d9d9d9;") 评论
 		.comment-list
 			each item in comments
@@ -27,16 +35,16 @@ block content
 							img(src="/uploads/#{item.from.img}", style="width:64px;height:64px;border-radius:50%")
 					.col-md-11
 						h5(style="color:#337ab7") #{item.from.name}
-							span.pull-right(style="color:#999") #{moment(item.meta.createAt,'YYYYDDMM').fromNow()}
+							span.pull-right(style="color:#999") #{moment(item.meta.createAt, 'YYYYDDMM').fromNow()}
 						p #{item.content}
 						.comment-reply
-							if item.reply && item.reply.length>0
+							if item.reply && item.reply.length > 0
 								each reply in item.reply
 									.row
 										.col-md-1
 											img(src="/uploads/#{reply.from.img}", style="width:64px;height:64px;border-radius:50%")
 										.col-md-11
-											h5(style="color:#337ab7") 
+											h5(style="color:#337ab7")
 												span #{reply.from.name} 
 												span(style="color:#666") 回复 
 												span #{reply.to.name}
@@ -44,7 +52,7 @@ block content
 									hr
 				hr
 		.row
-			form(id="form-comment",method="POST",action="/job/user/comment")
+			form(id="form-comment",method="POST",action="/weintern/job/comment")
 				.col-md-1
 					img(src="/images/headpic.png", style="width:64px;height:64px;border-radius:50%")
 				.col-md-11
@@ -57,6 +65,4 @@ block content
 				else
 					.form-group.pull-right(style="margin:15px;")
 						a(href="/",data-toggle="modal",data-target="#signin-modal") 登录后评论
-	script(src="//cdn.bootcss.com/moment.js/2.18.1/moment.min.js")
-	script(src="//cdn.bootcss.com/moment.js/2.18.1/locale/zh-cn.js")
 	script(src="/js/comment.js")
