--- a/views/pages/jobDetail.jade
+++ b/views/pages/jobDetail.jade
@@ -7,25 +7,26 @@ block content
 				h6 #{moment(job.meta.updateAt).format("YYYY-MM-DD HH:mm:ss")} 刷新
 				h4 简述:
 					span #{job.salary}/天 |
-					span #{job.worksite} |
+					span #{worksite.addr} |
 					span #{job.education} |
 					span #{job.internWeek}天/周 |
 					span 实习#{job.interMonth}个月 |
-					if job.canFulltime
+					if job.canBeRegular
 						span 提供转正机会
 				if job.welfare
 					h4 职位福利: #{job.welfare}
-			.col-md-4.pull-right
+			.col-md-4
 				.media
 					.media-left
-						if job.url
-							a(href='#{job.url}')
+						if job.companyUrl
+							a(href='#{job.companyUrl}')
+								img.media-object.img-rounded(src='/uploads/#{job.image}', alt='公司logo', style="height:50px")
 						else
 							a(href='javascript:;')
-								img.media-object.img-rounded(src='/uploads/#{job.image}', alt='公司logo')
+								img.media-object.img-rounded(src='/uploads/#{job.image}', alt='公司logo', style="height:50px")
 					.media-body
 						h3.media-heading(style='color: blue') #{job.company}
-						h4 #{job.category}
+						h4 #{category.name}
 		h3(style="padding-bottom:12px;border-bottom:1px solid #d9d9d9;") 评论
 		.comment-list
 			each item in comments
@@ -59,7 +60,7 @@ block content
 					textarea.form-control(cols="3",name="comment[content]",style="height:70px;",placeholder="说点什么吧！")
 				if user
 					.form-group.pull-right(style="margin:15px;")
-						input(type="hidden",name="comment[index]",value="#{movie._id}")
+						input(type="hidden",name="comment[index]",value="#{job._id}")
 						input(type="hidden",name="comment[from]",value="#{user._id}")
 						button#comment-btn.btn.btn-primary(type="submit") 发表评论
 				else
